Update index.html and README.md to clarify NUMPTi definition
- Added a description of NUMPTi in both index.html and README.md, explaining the acronym and its significance.
- Enhanced user understanding of the time system by providing additional context about the project's name and structure.

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
 			</div>
 			<div class="modal__body">
 				<p><strong>NUMPTi</strong> uses a 96-hour day with fixed-length hours and a small overlap window at each hour boundary to avoid a single “hard” tick.</p>
+				<p><strong>NUMPTi</strong> stands for <strong>N</strong>ew <strong>U</strong>niversal <strong>M</strong>etric <strong>P</strong>artitioned <strong>T</strong>ime — styled as <strong>NUMPTi</strong> because the trailing lower-case <strong>i</strong> is part of <strong>T</strong>ime.</p>
 
 				<h3>Core time units</h3>
 				<ul>
